# xmldig2csv-converter

./: CMakeLists.txt  COMMIT  Makefile  README.md  cmake_install.cmake  main.cpp  write_csv.hpp  xmlfunctions.hpp
example-data/: Digital1--manual--00207-WAVESTUDIO.txt  Digital1--manual--00207.XMLdig  Digital1--manual--00207.csv  Digital1--manual--nomemset.csv  Digital1--manual-WAVESTUDIO.txt  Digital1--manual.XMLdig  trace--00002.XMLdig
